--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 alembic = "*"
-sqlalchemy = {extras = ["asyncio"], version = "<1.5.0"}
+sqlalchemy = {extras = ["asyncio"], version = "*"}
 pyjwt = "*"
 uvicorn = {extras = ["standard"],version = ">=0.11.7"}
 fastapi = ">=0.62.0"
