--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -5,7 +5,7 @@ COPY . /home
 WORKDIR /home
 ENV ENV=dev
 RUN pip install pipenv mysqlclient
-RUN pipenv install --system
+RUN pip install -r requirements.txt
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
